# planning-poker

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
conf/: decks.json
pp/: db.py  model.py  server.py  session.py  utils.py
test/: test_db.py  test_model.py  test_server.py  test_session.py  test_utils.py
